--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.7",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "styled-components": "^5.3.3"
