--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.7",
+    "@react-navigation/stack": "^6.1.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-safe-area-context": "^3.3.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
