--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.7",
     "@react-navigation/stack": "^6.1.0",
+    "axios": "^0.25.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-dotenv": "^3.3.1",
