--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-vector-icons": "^9.0.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
