--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,6 +77,29 @@ import com.android.build.OutputFile
  * ]
  */
 
+project.ext.vectoricons = [
+    iconFontNames: [ 
+        'AntDesign.ttf', 
+        'Entypo.ttf', 
+        'Feather.ttf', 
+        'FontAwesome.ttf', 
+        'MaterialIcons.ttf', 
+        'EvilIcons.ttf', 
+        'FontAwesome5_Brands.ttf', 
+        'FontAwesome5_Regular.ttf',
+        'FontAwesome5_Solid.ttf',
+        'Fontisto.ttf',
+        'Foundation.ttf',
+        'MaterialCommunityIcons.ttf',
+        'SimpleLineIcons.ttf',
+        'Octicons.ttf',
+        'Zocial.ttf',
+    ]
+]
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+
+
 project.ext.react = [
     enableHermes: false,  // clean and rebuild if changing
 ]
